// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Name /> without throwing 1`] = `
.c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c4 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c4 + button {
  margin-left: 0.375rem;
}

.c3 {
  display: inline-block;
}

.c2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c2:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c2:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c2[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c2:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c2:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  margin-top: 1.5rem;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
  >
    <h3
      className="c1"
    />
  </div>
  <button
    className="c2 c3 c4"
    href=""
    onClick={undefined}
    type="button"
  >
    Edit
  </button>
</form>
`;

exports[`renders <Name expanded /> without throwing 1`] = `
.c0 {
  margin-bottom: 1rem;
}

.c1 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  padding-bottom: 2.25rem;
}

.c8 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c8 + button {
  margin-left: 0.375rem;
}

.c7 {
  display: inline-block;
}

.c6 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c6:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c6:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c6:active,
.c6:active:hover,
.c6:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c6[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  max-width: 18.75rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c3 {
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-right: 0.75rem;
  font-weight: bold;
  white-space: pre;
  font-size: 0.8125rem;
}

.c5 {
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  float: right;
  font-size: 0.8125rem;
  float: none;
  margin-left: 1.75rem;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
  >
    <p
      className="c1"
    >
      Your instance name will be used to identify this specific instance.
    </p>
  </div>
  <div
    className="c2"
    name="name"
    role="group"
    style={undefined}
  >
    <label
      className="c3"
      htmlFor="Y"
    >
      Name
    </label>
    <input
      className="c4"
      disabled={false}
      id="Y"
    />
    <label
      className="c5"
    />
  </div>
  <button
    className="c6 c7 c8"
    disabled={undefined}
    href=""
    type="submit"
  >
    Next
  </button>
</form>
`;

exports[`renders <Name name="test" /> without throwing 1`] = `
.c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c4 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c4 + button {
  margin-left: 0.375rem;
}

.c3 {
  display: inline-block;
}

.c2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c2:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c2:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c2[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c2:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c2:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  margin-top: 1.5rem;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
  >
    <h3
      className="c1"
    >
      test
    </h3>
  </div>
  <button
    className="c2 c3 c4"
    href=""
    onClick={undefined}
    type="button"
  >
    Edit
  </button>
</form>
`;

exports[`renders <Name pristine={false} /> without throwing 1`] = `
.c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c4 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c4 + button {
  margin-left: 0.375rem;
}

.c3 {
  display: inline-block;
}

.c2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c2:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c2:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c2[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c2:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c2:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  margin-top: 1.5rem;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
  >
    <h3
      className="c1"
    />
  </div>
  <button
    className="c2 c3 c4"
    href=""
    onClick={undefined}
    type="button"
  >
    Edit
  </button>
</form>
`;
